# caches

./: .gitignore  Cargo.toml  README.md
.github/workflows/: reuse-lint.yml
benches/: cache_parameter_comparison.rs  concurrent.rs  hashmaps_bench.rs  hit_rate.rs  imitation.rs  imitation_miss_count.rs  lru_bench.rs  qq_bench.rs  sequence.rs  single_thread.rs  transactional_cache.rs
benches/access_logs/: Carabas.in  Carabas.in.license  Carabas.txn  README.md  gen_rand.txn  gen_sequential.txn  output.in
benches/results/: README.md  hit_rate-Carabas.result  hit_rate-output.result
src/: arc.rs  bloom_filter.rs  bpt_transactional.rs  bptree.rs  bptree_hash_map.rs  cache.rs  clock.rs  clock_pro.rs  clock_pro_associative.rs  clock_pro_transactional.rs  hash_map.rs  lfu.rs  lib.rs  lirs.rs  list.rs  lru.rs  lru_associative.rs  lru_transactional.rs  qq.rs  qq_lfu.rs  rr.rs  trie_hashmap.rs
temp_criterion_results/: concurrent-Carabas.json  concurrent-gen_rand-backup.json  concurrent-gen_rand.json  concurrent-gen_sequential-backup.json  concurrent-gen_sequential.json  hashmaps-backup.json  hashmaps.json  single_thread-backup.json  single_thread-gen_rand.json  single_thread-gen_sequential.json  single_thread.json
