[package]
name = "caches"
version = "0.1.0"
authors = ["korecekm <martin.korecek.100@seznam.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
ahash = "0.6.2"

[dev-dependencies]
criterion = "0.3"
concache = "0.2.1"
crossbeam = "0.8.1"
concread = { git = "https://github.com/kanidm/concread.git", rev = "72430fb42a56cf5dd6b4a0e5ce0bb62f607a6db1" }

[[bench]]
name = "concurrent"
harness = false
