[package]
name = "caches"
version = "0.1.0"
authors = ["korecekm <martin.korecek.100@seznam.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
ahash = "0.6.2"

[dev-dependencies]
criterion = "0.3"
crossbeam = "0.8.1"

[[bench]]
name = "cache_parameter_comparison"
harness = false
[[bench]]
name = "hit_rate"
harness = false
[[bench]]
name = "single_thread"
harness = false
[[bench]]
name = "concurrent"
harness = false
[[bench]]
name = "hashmaps_bench"
harness = false
